--- a/src/main/Resources/application.properties
+++ b/src/main/Resources/application.properties
@@ -1,11 +1,16 @@
 #############
 # SQL settings
 #############
-spring.datasource.url=jdbc:mysql://localhost:3306/website_rest?useUSSL=false&serverTimezone=UTC
-spring.datasource.username=website
-spring.datasource.password=website
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://34.107.103.23:3306/teamplanner
+spring.datasource.username=teamplanner
+spring.datasource.password=teamplanner
+spring.datasource.initialization-mode=always
+server.port = 8080
+spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+spring.cloud.gcp.sql.instance-connection-name=teamplanner-springboot-rest:europe-west3:teamplanner-springboot-rest-mysql
+spring.cloud.gcp.sql.database-name=teamplanner
 #############
 # google oauth connection settings
 #############
