--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 #############
 # SQL settings
 #############
+
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://34.107.103.23:3306/teamplanner
+#spring.datasource.url=jdbc:mysql://35.107.103.23:3306/teamplanner
 spring.datasource.username=teamplanner
 spring.datasource.password=teamplanner
 spring.datasource.initialization-mode=always
-server.port = 8080
-spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+#server.port = 8080
+#spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 spring.cloud.gcp.sql.instance-connection-name=teamplanner-springboot-rest:europe-west3:teamplanner-springboot-rest-mysql
 spring.cloud.gcp.sql.database-name=teamplanner
+
 #############
 # google oauth connection settings
 #############
@@ -30,3 +32,7 @@ logging.file.max-history=20
 # Error stacktrace config
 #############
 server.error.include-stacktrace=on_trace_param
+#############
+# Cloud security setting to avoid exception due to bug
+#############
+spring.cloud.gcp.security.firebase.enabled=false
