--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,14 +18,14 @@ spring.cloud.gcp.sql.database-name=teamplanner
 #############
 google.client.id=524272934250-0eeakh761npvpo8th9s1lepqobgebjj5
 google.client.secret=454Df4UbzBxfY07KO7bXHdHS
-google.redirect.uri=http://localhost:3000
+google.redirect.uri=https://teamplanner.netlify.app
 google.token.endpoint=https://oauth2.googleapis.com/token
 #############
 # Log level
 #############
-logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats = debug
-#logging.level.root=debug
-logging.level.com.teamplanner=debug
+logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats = warn
+logging.level.root=warn
+logging.level.com.teamplanner=warn
 logging.file.name=myapp.log
 logging.file.max-history=20
 #############
