fixing cookie issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,9 +23,9 @@ google.token.endpoint=https://oauth2.googleapis.com/token
 #############
 # Log level
 #############
-logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats = warn
-logging.level.root=warn
-logging.level.com.teamplanner=warn
+logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats = debug
+#logging.level.root=warn
+logging.level.com.teamplanner=debug
 logging.file.name=myapp.log
 logging.file.max-history=20
 #############
