--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 **/src/test/**
 **/src/main/resources/**
 !**/src/main/resources/application.properties
+!**/src/main/resources/static/**
 !**/src/main/resources/static
 
 ### STS ###
