change google redirect uri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.cloud.gcp.sql.database-name=teamplanner
 #############
 google.client.id=524272934250-0eeakh761npvpo8th9s1lepqobgebjj5
 google.client.secret=454Df4UbzBxfY07KO7bXHdHS
-google.redirect.uri=https://teamplanner.netlify.app
+google.redirect.uri=https://teamplanner.xyz
 google.token.endpoint=https://oauth2.googleapis.com/token
 #############
 # Log level
