--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,20 +4,17 @@
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://35.107.103.23:3306/teamplanner
 spring.datasource.username=teamplanner
 spring.datasource.password=teamplanner
 spring.datasource.initialization-mode=always
-#server.port = 8080
-#spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 spring.cloud.gcp.sql.instance-connection-name=teamplanner-springboot-rest:europe-west3:teamplanner-springboot-rest-mysql
 spring.cloud.gcp.sql.database-name=teamplanner
 
 #############
 # google oauth connection settings
 #############
-google.client.id=524272934250-0eeakh761npvpo8th9s1lepqobgebjj5
-google.client.secret=454Df4UbzBxfY07KO7bXHdHS
+google.client.id=set your own
+google.client.secret=set your own
 google.redirect.uri=https://teamplanner.xyz
 google.token.endpoint=https://oauth2.googleapis.com/token
 #############
