change oauth client id for deployed app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 #############
 # SQL settings
 #############
-
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.username=teamplanner
@@ -9,7 +8,6 @@ spring.datasource.password=teamplanner
 spring.datasource.initialization-mode=always
 spring.cloud.gcp.sql.instance-connection-name=teamplanner-springboot-rest:europe-west3:teamplanner-springboot-rest-mysql
 spring.cloud.gcp.sql.database-name=teamplanner
-
 #############
 # google oauth connection settings
 #############
@@ -20,9 +18,9 @@ google.token.endpoint=https://oauth2.googleapis.com/token
 #############
 # Log level
 #############
-logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats = debug
-#logging.level.root=warn
-logging.level.com.teamplanner=debug
+logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats = warn
+logging.level.root=warn
+logging.level.com.teamplanner=warn
 logging.file.name=myapp.log
 logging.file.max-history=20
 #############
